examples/bad/static_error_tuple_index_unknown.ps
tuple<int, string, bool> tup = (1, "hello", true);
int i = 0;

while i < 3 {
    println(tup[i]);
}